# agentic-planning

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml  docs-sync-guardrails.yml  release.yml  runtime-hardening-guardrails.yml
crates/agentic-planning/: Cargo.toml
crates/agentic-planning-bridges/: Cargo.toml
crates/agentic-planning-bridges/src/: lib.rs
crates/agentic-planning-cli/: Cargo.toml
crates/agentic-planning-cli/src/: main.rs
crates/agentic-planning-ffi/: Cargo.toml
crates/agentic-planning-ffi/include/: agentic_planning.h
crates/agentic-planning-ffi/src/: lib.rs
crates/agentic-planning-mcp/: Cargo.toml
crates/agentic-planning-mcp/src/: ghost_bridge.rs  lib.rs  main.rs  protocol.rs  server.rs
crates/agentic-planning-mcp/tests/: edge_cases_inventions.rs
crates/agentic-planning/benches/: benchmarks.rs
crates/agentic-planning/src/: audit.rs  auth.rs  contracts.rs  error.rs  file_format.rs  indexes.rs  inventions.rs  isolation.rs  lib.rs  locking.rs  query_engine.rs  types.rs  validation.rs  write_engine.rs
crates/agentic-planning/src/bridges/: mod.rs  noop.rs  traits.rs
crates/agentic-planning/tests/: conservation_test.rs  paper_benchmarks.rs  phase_scenarios.rs  stress_tests.rs
docs/ecosystem/: CANONICAL_SISTER_KIT.md
docs/public/: api-reference.md  architecture.md  benchmarks.md  cli-reference.md  command-surface.md  concepts.md  configuration.md  experience-with-vs-without.md  faq.md  ffi-reference.md  file-format.md  initial-problem-coverage.md  installation.md  integration-guide.md  mcp-prompts.md  mcp-resources.md  mcp-tools.md  overview.md  playbooks-agent-integration.md  primary-problem-coverage.md  quickstart.md  runtime-install-sync.md  runtime-sync.md  sister.manifest.json  troubleshooting.md
docs/public/ecosystem/: CANONICAL_SISTER_KIT.md
npm/wasm/: Cargo.toml
npm/wasm/src/: lib.rs
paper/paper-i-intention-format/: agenticplanning-paper.tex  references.bib
planning-docs/: AGENTIC-PLANNING-22-INVENTIONS.md  AGENTIC-PLANNING-INDEX.md  AGENTIC-PLANNING-SPEC-PART1.md  AGENTIC-PLANNING-SPEC-PART2.md  AGENTIC-PLANNING-SPEC-PART3.md  AGENTIC-PLANNING-SPEC-PART4.md  SPEC-CI-GUARDRAILS.md  SPEC-DOCS-PUBLIC-SYNC.md  SPEC-INSTALLER-UNIVERSAL.md  SPEC-PROJECT-STRUCTURE-PLANNING.md  SPEC-RELEASE-PUBLISH.md  SPEC-RUNTIME-HARDENING.md
python/: README.md  pyproject.toml
python/src/agentic_planning/: __init__.py
python/tests/: test_planning_graph.py
scripts/: check-canonical-sister.sh  check-ci-guardrails.sh  check-docs-sync.sh  check-install-commands.sh  check-runtime-hardening.sh  docs-sync.sh  install.sh  release-gates.sh  release.sh  test-primary-problems.sh
specs/: DOCS-GAP-REPORT-2.md  GAP-REPORT.md  SPEC-01-MCP-HARDENING.md  SPEC-02-FILE-FORMAT-INTEGRITY.md  SPEC-03-CORE-STUBS.md  SPEC-04-INDEXES-AND-VALIDATION.md  SPEC-05-CLI-COMPLETENESS.md  SPEC-06-FFI-EXPANSION.md  SPEC-07-INVENTIONS.md  SPEC-08-DOCS.md  SPEC-09-GETTING-STARTED.md  SPEC-10-ARCHITECTURE.md  SPEC-11-GUIDES.md  SPEC-12-NARRATIVE.md  SPEC-13-REFERENCE-OPS.md
tests/integration/: cli_tests.rs
