[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "agentic-planning"
version = "0.1.0"
description = "Planning infrastructure for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Agentra Labs" }]
keywords = ["ai", "agents", "planning", "mcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "mypy>=1.10"]

[project.urls]
Homepage = "https://github.com/agentralabs/agentic-planning"
Documentation = "https://github.com/agentralabs/agentic-planning/tree/main/docs"
Repository = "https://github.com/agentralabs/agentic-planning"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_planning"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
