[package]
name = "agentic-planning-bridges"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Sister integration bridges for agentic-planning"

[dependencies]
agentic-planning = { path = "../agentic-planning", version = "0.1.0" }
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
