[package]
name = "agentic-planning-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI for agentic-planning"

[[bin]]
name = "aplan"
path = "src/main.rs"

[dependencies]
agentic-planning = { path = "../agentic-planning" }
agentic-planning-mcp = { path = "../agentic-planning-mcp" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
