[package]
name = "agentic-planning-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "FFI bridge for agentic-planning"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
agentic-planning = { path = "../agentic-planning", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
uuid = { workspace = true, features = ["v4"] }
