[package]
name = "agentic-planning-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP server for agentic-planning"

[dependencies]
agentic-planning = { path = "../agentic-planning", version = "0.1.0" }
ctrlc = "3"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[[bin]]
name = "agentic-planning-mcp"
path = "src/main.rs"

[dev-dependencies]
tempfile.workspace = true
