[package]
name = "agentic-planning"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Persistent intention infrastructure for AI agents"

[dependencies]
agentic-sdk = { workspace = true }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
blake3.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "cli_bench"
harness = false

[[bench]]
name = "mcp_bench"
harness = false

[[bench]]
name = "stress_bench"
harness = false
